package edu.fiuba.algo3.modelo.Joker.GeneradorRandom;

public interface GeneradorRandom {
    boolean validar();
}
